// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview snapshots snapshots: renders as expected with default props 1`] = `""`;

exports[`Preview snapshots snapshots: renders as expected with problemType is choiceresponse 1`] = `
<Container
  className="bg-light-300 rounded p-4"
  style={
    Object {
      "height": "400px",
      "width": "494px",
    }
  }
>
  <div
    className="small"
  >
    Multi-select problem
  </div>
  <Image
    alt="A preview illustration of a {problemType, select,
      multiplechoiceresponse {single select}
      stringreponse {text input}
      numericalresponse {numerical input}
      optionresponse {dropdown}
      choiceresponse {multiple select}
      other {null}
    } problem"
    className="my-3"
    fluid={true}
    src="test-file-stub"
  />
  <div
    className="mb-3"
  >
    Enter your multi-select answers below and select which choices are correct
  </div>
  <Hyperlink
    destination="https://edx.readthedocs.io/projects/edx-partner-course-staff/en/latest/exercises_tools/checkbox.html"
    target="_blank"
  >
    <FormattedMessage
      defaultMessage="Learn more"
      description="Label for Learn more button"
      id="authoring.problemEditor.learnMoreButtonLabel.label"
    />
  </Hyperlink>
</Container>
`;

exports[`Preview snapshots snapshots: renders as expected with problemType is multiplechoiceresponse 1`] = `
<Container
  className="bg-light-300 rounded p-4"
  style={
    Object {
      "height": "400px",
      "width": "494px",
    }
  }
>
  <div
    className="small"
  >
    Single select problem
  </div>
  <Image
    alt="A preview illustration of a {problemType, select,
      multiplechoiceresponse {single select}
      stringreponse {text input}
      numericalresponse {numerical input}
      optionresponse {dropdown}
      choiceresponse {multiple select}
      other {null}
    } problem"
    className="my-3"
    fluid={true}
    src="test-file-stub"
  />
  <div
    className="mb-3"
  >
    Enter your single select answers below and select which choice is correct
  </div>
  <Hyperlink
    destination="https://edx.readthedocs.io/projects/edx-partner-course-staff/en/latest/exercises_tools/multiple_choice.html"
    target="_blank"
  >
    <FormattedMessage
      defaultMessage="Learn more"
      description="Label for Learn more button"
      id="authoring.problemEditor.learnMoreButtonLabel.label"
    />
  </Hyperlink>
</Container>
`;

exports[`Preview snapshots snapshots: renders as expected with problemType is numericalresponse 1`] = `
<Container
  className="bg-light-300 rounded p-4"
  style={
    Object {
      "height": "400px",
      "width": "494px",
    }
  }
>
  <div
    className="small"
  >
    Numerical input problem
  </div>
  <Image
    alt="A preview illustration of a {problemType, select,
      multiplechoiceresponse {single select}
      stringreponse {text input}
      numericalresponse {numerical input}
      optionresponse {dropdown}
      choiceresponse {multiple select}
      other {null}
    } problem"
    className="my-3"
    fluid={true}
    src="test-file-stub"
  />
  <div
    className="mb-3"
  >
    Enter correct numerical input answers below
  </div>
  <Hyperlink
    destination="https://edx.readthedocs.io/projects/edx-partner-course-staff/en/latest/exercises_tools/numerical_input.html"
    target="_blank"
  >
    <FormattedMessage
      defaultMessage="Learn more"
      description="Label for Learn more button"
      id="authoring.problemEditor.learnMoreButtonLabel.label"
    />
  </Hyperlink>
</Container>
`;

exports[`Preview snapshots snapshots: renders as expected with problemType is optionresponse 1`] = `
<Container
  className="bg-light-300 rounded p-4"
  style={
    Object {
      "height": "400px",
      "width": "494px",
    }
  }
>
  <div
    className="small"
  >
    Dropdown problem
  </div>
  <Image
    alt="A preview illustration of a {problemType, select,
      multiplechoiceresponse {single select}
      stringreponse {text input}
      numericalresponse {numerical input}
      optionresponse {dropdown}
      choiceresponse {multiple select}
      other {null}
    } problem"
    className="my-3"
    fluid={true}
    src="test-file-stub"
  />
  <div
    className="mb-3"
  >
    Enter your dropdown answers below and select which choice is correct
  </div>
  <Hyperlink
    destination="https://edx.readthedocs.io/projects/edx-partner-course-staff/en/latest/exercises_tools/dropdown.html"
    target="_blank"
  >
    <FormattedMessage
      defaultMessage="Learn more"
      description="Label for Learn more button"
      id="authoring.problemEditor.learnMoreButtonLabel.label"
    />
  </Hyperlink>
</Container>
`;

exports[`Preview snapshots snapshots: renders as expected with problemType is stringresponse 1`] = `
<Container
  className="bg-light-300 rounded p-4"
  style={
    Object {
      "height": "400px",
      "width": "494px",
    }
  }
>
  <div
    className="small"
  >
    Text input problem
  </div>
  <Image
    alt="A preview illustration of a {problemType, select,
      multiplechoiceresponse {single select}
      stringreponse {text input}
      numericalresponse {numerical input}
      optionresponse {dropdown}
      choiceresponse {multiple select}
      other {null}
    } problem"
    className="my-3"
    fluid={true}
    src="test-file-stub"
  />
  <div
    className="mb-3"
  >
    Enter your text input answers below and select which choices are correct
  </div>
  <Hyperlink
    destination="https://edx.readthedocs.io/projects/edx-partner-course-staff/en/latest/exercises_tools/text_input.html"
    target="_blank"
  >
    <FormattedMessage
      defaultMessage="Learn more"
      description="Label for Learn more button"
      id="authoring.problemEditor.learnMoreButtonLabel.label"
    />
  </Hyperlink>
</Container>
`;
